--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = [ "hatchling",]
 build-backend = "hatchling.build"
 
 [project]
-name = "pyrpc"
+name = "pyrpc-ts"
 version = "0.1.1"
 description = "A type-safe RPC framework for Python"
 readme = "README.md"
@@ -13,8 +13,8 @@ keywords = [ "rpc", "api", "type-safe", "framework", "fastapi", "flask", "django
 classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Topic :: Software Development :: Libraries :: Python Modules",]
 dependencies = [ "pydantic>=2.5.2", "httpx>=0.25.2", "typing-extensions>=4.8.0", "uvicorn>=0.34.0",]
 [[project.authors]]
-name = "Your Name"
-email = "your.email@example.com"
+name = "Armin Naimi"
+email = "armin.naimi@gmail.com"
 
 [project.optional-dependencies]
 fastapi = [ "fastapi>=0.104.1", "uvicorn>=0.24.0",]
