chore: add ruff formatting and linting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = [ "hatchling",]
+requires = [ "hatchling", "ruff"]
 build-backend = "hatchling.build"
 
 [project]
@@ -11,7 +11,13 @@ requires-python = ">=3.9"
 license = "MIT"
 keywords = [ "rpc", "api", "type-safe", "framework", "fastapi", "flask", "django",]
 classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Topic :: Software Development :: Libraries :: Python Modules",]
-dependencies = [ "pydantic>=2.5.2", "httpx>=0.25.2", "typing-extensions>=4.8.0", "uvicorn>=0.34.0",]
+dependencies = [
+ "pydantic>=2.5.2",
+ "httpx>=0.25.2",
+ "typing-extensions>=4.8.0",
+ "uvicorn>=0.34.0",
+ "ruff>=0.9.3",
+]
 [[project.authors]]
 name = "Armin Naimi"
 email = "armin.naimi@gmail.com"
@@ -21,7 +27,7 @@ fastapi = [ "fastapi>=0.104.1", "uvicorn>=0.24.0",]
 flask = [ "flask>=3.0.0",]
 django = [ "django>=4.2.0",]
 all = [ "fastapi>=0.104.1", "uvicorn>=0.24.0", "flask>=3.0.0", "django>=4.2.0",]
-test = [ "pytest>=7.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0", "fastapi>=0.104.1", "flask>=3.0.0", "django>=4.2.0", "httpx>=0.25.2",]
+test = [ "pytest>=7.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0", "fastapi>=0.104.1", "flask>=3.0.0", "django>=4.2.0", "httpx>=0.25.2", "ruff>=0.3.0",]
 
 [project.urls]
 Homepage = "https://github.com/arminnaimi/pyrpc"
@@ -44,3 +50,30 @@ exclude_lines = [ "pragma: no cover", "def __repr__", "if TYPE_CHECKING:", "rais
 
 [tool.hatch.build.targets.wheel]
 packages = [ "src/pyrpc",]
+
+[tool.ruff]
+# Enable pycodestyle (`E`), Pyflakes (`F`), and import sorting (`I`)
+select = ["E", "F", "I", "N", "B", "W", "C90"]
+ignore = []
+
+# Same as Black.
+line-length = 88
+indent-width = 4
+
+# Assume Python 3.9
+target-version = "py39"
+
+[tool.ruff.format]
+# Use double quotes for strings.
+quote-style = "double"
+# Indent with spaces.
+indent-style = "space"
+# Line ending style
+line-ending = "auto"
+
+[tool.ruff.isort]
+known-first-party = ["pyrpc"]
+combine-as-imports = true
+
+[tool.ruff.mccabe]
+max-complexity = 10
